--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Nasty Sentiment Analysis</title>
+    <title>Sentiment Analysis</title>
     <style>
         body {
             font-family: 'Comic Sans MS', cursive, sans-serif;
